fix alignments and video on news

--- a/public/css/non-admin.css
+++ b/public/css/non-admin.css
@@ -7095,7 +7095,8 @@ body {
     -webkit-box-shadow: 0 0 6px 1px #146197; }
 
 .Card__Image {
-  width: 100%; }
+  width: 100%;
+  max-height: 300px; }
 
 .Card__Title {
   font-size: 1.6em;
