--- a/resources/assets/sass/non-admin/components/card.scss
+++ b/resources/assets/sass/non-admin/components/card.scss
@@ -14,6 +14,7 @@
 
 .Card__Image {
     width: 100%;
+    max-height: 300px;
 }
 
 .Card__Title {
